--- a/chirp-chirp/src/main/resources/templates/main.mustache
+++ b/chirp-chirp/src/main/resources/templates/main.mustache
@@ -1,27 +1,31 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<Title>Main</Title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<Title>Main</Title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 	<div>
 		<form method="POST">
-			<input type="text" name="text" placeholder="input text"/>
-			<input type="text" name="tag" placeholder="input tag"/>
+			<input type="text" name="text" placeholder="input text" /> <input
+				type="text" name="tag" placeholder="input tag" />
 			<button type="submit">Add</button>
-		
+
 		</form>
 	</div>
 
-    <div>Message List</div>
-    
-    {{#messages}}
-  		<div> 
-  			<b>{{id}}</b>
-  			<span>{{text}}</span>
-  			<i>{{tag}} </i>
-  		</div>
+	<div>Message List</div>
+
+	<form method="POST" action="filter">
+		<input type="text" name="filter" placeholder="find by tag" />
+		<button type="submit">Find</button>
+
+	</form>
+
+	{{#messages}}
+	<div>
+		<b>{{id}}</b> <span>{{text}}</span> <i>{{tag}} </i>
+	</div>
 	{{/messages }}
 </body>
 </html>
